--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,7 +32,7 @@ dependencies = [
   "trafilatura>=2.0.0",
   "datasets>=3.3.2",
   "pandas>=2.3.3",
-  "numpy>=2.4.1",
+  "numpy<2.0",
   "tqdm>=4.67.1",
   "pyyaml>=6.0.3",
   "python-dateutil>=2.9.0.post0",
