--- a/datasets/language_id/config.yaml
+++ b/datasets/language_id/config.yaml
@@ -17,7 +17,7 @@ dataset:
 source:
   # Derive from Clean Text Corpus
   source_dataset: "clean_text"
-  source_dataset_path: "../clean_text/output"
+  source_dataset_path: "../../output/clean_text"
   
 extraction:
   # Text extraction strategy
